# galleon

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs  logger.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  logger.rs
win32/: Cargo.toml
win32/src/: logger.rs  macros.rs  main.rs
