[workspace]
resolver = "2"
members = ["common", "win32"]

[workspace.package]
version = "0.0.1"
license-file = "LICENSE"
edition = "2021"

[workspace.dependencies]
common = { version = "*", path = "./common" }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace.dependencies.windows-sys]
version = "0.52.0"
features = ["Win32_System_Diagnostics_Debug"]

# [profile.dev]
# opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "off"
incremental = true
